BUG 12037: Radio line text fields shouldn't get overflow: hidden.
QA: Retest.

--- a/app/styles/control-pane.sass
+++ b/app/styles/control-pane.sass
@@ -284,6 +284,10 @@
 
         .radioLine
           position: relative
+
+          &.text > label
+            overflow: visible
+
         input[type="radio"], .uniform.radio
           left: 0
           position: absolute
